--- a/02_Improving_Deep_NN/0201_optimization_methods_v1b.ipynb
+++ b/02_Improving_Deep_NN/0201_optimization_methods_v1b.ipynb
@@ -6,7 +6,7 @@
    "source": [
     "# Optimization Methods\n",
     "\n",
-    "**A very nice [blog](https://ruder.io/optimizing-gradient-descent/)**\n",
+    "**A beautifully written blog on [optimization methods used in gradient descent](https://ruder.io/optimizing-gradient-descent/)**\n",
     "\n",
     "Until now, you've always used Gradient Descent to update the parameters and minimize the cost. In this notebook, you will learn more advanced optimization methods that can speed up learning and perhaps even get you to a better final value for the cost function. Having a good optimization algorithm can be the difference between waiting days vs. just a few hours to get a good result. \n",
     "\n",
