--- a/01_Deep_Neural_Network/2logistic_regression/Logistic_Regression_with_a_Neural_Network_mindset.ipynb
+++ b/01_Deep_Neural_Network/2logistic_regression/Logistic_Regression_with_a_Neural_Network_mindset.ipynb
@@ -65,7 +65,8 @@
     "import scipy\n",
     "from PIL import Image\n",
     "from scipy import ndimage\n",
-    "from lr_utils import load_dataset\n",
+    "\n",
+    "data_dir = '../dataset/'\n",
     "\n",
     "%matplotlib inline"
    ]
@@ -77,6 +78,24 @@
    "outputs": [],
    "source": [
     "# Loading the data (cat/non-cat)\n",
+    "\n",
+    "def load_dataset():\n",
+    "    train_dataset = h5py.File(data_dir+'train_catvnoncat.h5', \"r\")\n",
+    "    train_set_x_orig = np.array(train_dataset[\"train_set_x\"][:]) # your train set features\n",
+    "    train_set_y_orig = np.array(train_dataset[\"train_set_y\"][:]) # your train set labels\n",
+    "\n",
+    "    test_dataset = h5py.File(data_dir+'test_catvnoncat.h5', \"r\")\n",
+    "    test_set_x_orig = np.array(test_dataset[\"test_set_x\"][:]) # your test set features\n",
+    "    test_set_y_orig = np.array(test_dataset[\"test_set_y\"][:]) # your test set labels\n",
+    "\n",
+    "    classes = np.array(test_dataset[\"list_classes\"][:]) # the list of classes\n",
+    "    \n",
+    "    train_set_y_orig = train_set_y_orig.reshape((1, train_set_y_orig.shape[0]))\n",
+    "    test_set_y_orig = test_set_y_orig.reshape((1, test_set_y_orig.shape[0]))\n",
+    "    \n",
+    "    return train_set_x_orig, train_set_y_orig, test_set_x_orig, test_set_y_orig, classes\n",
+    "\n",
+    "\n",
     "train_set_x_orig, train_set_y, test_set_x_orig, test_set_y, classes = load_dataset()"
    ]
   },
