--- a/01_Deep_Neural_Network/wk4_Building_your_Deep_Neural_Network_Step_by_Step.ipynb
+++ b/01_Deep_Neural_Network/wk4_Building_your_Deep_Neural_Network_Step_by_Step.ipynb
@@ -90,24 +90,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 1,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "The autoreload extension is already loaded. To reload it, use:\n",
-      "  %reload_ext autoreload\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "import numpy as np\n",
     "import h5py\n",
     "import matplotlib.pyplot as plt\n",
-    "from testCases_v4a import *\n",
-    "from dnn_utils_v2 import sigmoid, sigmoid_backward, relu, relu_backward\n",
+    "\n",
+    "from utils.wk4_testCases_v4a import *\n",
+    "from utils.wk4_dnn_utils_v2 import sigmoid, sigmoid_backward, relu, relu_backward\n",
     "\n",
     "%matplotlib inline\n",
     "plt.rcParams['figure.figsize'] = (5.0, 4.0) # set default size of plots\n",
@@ -142,7 +134,7 @@
     "    - Stack [LINEAR->RELU] backward L-1 times and add [LINEAR->SIGMOID] backward in a new L_model_backward function\n",
     "- Finally update the parameters.\n",
     "\n",
-    "<img src=\"../images/final outline.png\" style=\"width:800px;height:500px;\">\n",
+    "<img src=\"./images/final outline.png\" style=\"width:800px;height:500px;\">\n",
     "<caption><center> **Figure 1**</center></caption><br>\n",
     "\n",
     "\n",
@@ -169,7 +161,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -214,7 +206,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 3,
    "metadata": {
     "scrolled": true
    },
@@ -378,7 +370,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -414,7 +406,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [
     {
@@ -513,7 +505,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -545,14 +537,13 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "(1, 3) (3, 2) (1, 1)\n",
       "Z = [[ 3.26295337 -1.23429987]]\n"
      ]
     }
@@ -612,7 +603,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -656,7 +647,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [
     {
@@ -711,7 +702,7 @@
     "\n",
     "For even more convenience when implementing the $L$-layer Neural Net, you will need a function that replicates the previous one (`linear_activation_forward` with RELU) $L-1$ times, then follows that with one `linear_activation_forward` with SIGMOID.\n",
     "\n",
-    "<img src=\"../images/model_architecture_kiank.png\" style=\"width:600px;height:300px;\">\n",
+    "<img src=\"./images/model_architecture_kiank.png\" style=\"width:600px;height:300px;\">\n",
     "<caption><center> **Figure 2** : *[LINEAR -> RELU] $\\times$ (L-1) -> LINEAR -> SIGMOID* model</center></caption><br>\n",
     "\n",
     "**Exercise**: Implement the forward propagation of the above model.\n",
@@ -726,7 +717,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -775,7 +766,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 11,
    "metadata": {},
    "outputs": [
     {
@@ -838,7 +829,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": 12,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -873,7 +864,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": 13,
    "metadata": {},
    "outputs": [
     {
@@ -917,7 +908,7 @@
     "Just like with forward propagation, you will implement helper functions for backpropagation. Remember that back propagation is used to calculate the gradient of the loss function with respect to the parameters. \n",
     "\n",
     "**Reminder**: \n",
-    "<img src=\"../images/backprop_kiank.png\" style=\"width:650px;height:250px;\">\n",
+    "<img src=\"./images/backprop_kiank.png\" style=\"width:650px;height:250px;\">\n",
     "<caption><center> **Figure 3** : Forward and Backward propagation for *LINEAR->RELU->LINEAR->SIGMOID* <br> *The purple blocks represent the forward propagation, and the red blocks represent the backward propagation.*  </center></caption>\n",
     "\n",
     "<!-- \n",
@@ -948,7 +939,7 @@
     "\n",
     "Suppose you have already calculated the derivative $dZ^{[l]} = \\frac{\\partial \\mathcal{L} }{\\partial Z^{[l]}}$. You want to get $(dW^{[l]}, db^{[l]}, dA^{[l-1]})$.\n",
     "\n",
-    "<img src=\"../images/linearback_kiank.png\" style=\"width:250px;height:300px;\">\n",
+    "<img src=\"./images/linearback_kiank.png\" style=\"width:250px;height:300px;\">\n",
     "<caption><center> **Figure 4** </center></caption>\n",
     "\n",
     "The three outputs $(dW^{[l]}, db^{[l]}, dA^{[l-1]})$ are computed using the input $dZ^{[l]}$.Here are the formulas you need:\n",
@@ -966,7 +957,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 19,
+   "execution_count": 14,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1003,7 +994,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 20,
+   "execution_count": 15,
    "metadata": {},
    "outputs": [
     {
@@ -1087,7 +1078,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 25,
+   "execution_count": 16,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1126,23 +1117,45 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 26,
+   "execution_count": 17,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "sigmoid:\n",
+      "dA_prev = [[-1.15171336  0.06718465 -0.3204696   2.09812712]\n",
+      " [ 0.60345879 -3.72508701  5.81700741 -3.84326836]\n",
+      " [-0.4319552  -1.30987417  1.72354705  0.05070578]\n",
+      " [-0.38981415  0.60811244 -1.25938424  1.47191593]\n",
+      " [-2.52214926  2.67882552 -0.67947465  1.48119548]]\n",
+      "dW = [[ 0.10266786  0.09778551 -0.01968084]]\n",
+      "db = [[-0.05729622]]\n",
+      "\n",
+      "relu:\n",
+      "dA_prev = [[ 0.44090989  0.        ]\n",
+      " [ 0.37883606  0.        ]\n",
+      " [-0.2298228   0.        ]]\n",
+      "dW = [[ 0.44513824  0.37371418 -0.10478989]]\n",
+      "db = [[-0.20837892]]\n"
+     ]
+    }
+   ],
    "source": [
     "dAL, linear_activation_cache = linear_activation_backward_test_case()\n",
     "\n",
     "A_prev, dW, db = linear_activation_backward(dAL, linear_activation_cache, activation = \"sigmoid\")\n",
-    "#rint (\"sigmoid:\")\n",
-    "#print (\"dA_prev = \"+ str(dA_prev))\n",
-    "#print (\"dW = \" + str(dW))\n",
-    "#print (\"db = \" + str(db) + \"\\n\")\n",
+    "print (\"sigmoid:\")\n",
+    "print (\"dA_prev = \"+ str(dA_prev))\n",
+    "print (\"dW = \" + str(dW))\n",
+    "print (\"db = \" + str(db) + \"\\n\")\n",
     "\n",
-    "#dA_prev, dW, db = linear_activation_backward(dAL, linear_activation_cache, activation = \"relu\")\n",
-    "#print (\"relu:\")\n",
-    "#print (\"dA_prev = \"+ str(dA_prev))\n",
-    "#print (\"dW = \" + str(dW))\n",
-    "#print (\"db = \" + str(db))"
+    "dA_prev, dW, db = linear_activation_backward(dAL, linear_activation_cache, activation = \"relu\")\n",
+    "print (\"relu:\")\n",
+    "print (\"dA_prev = \"+ str(dA_prev))\n",
+    "print (\"dW = \" + str(dW))\n",
+    "print (\"db = \" + str(db))"
    ]
   },
   {
@@ -1210,7 +1223,7 @@
     "Now you will implement the backward function for the whole network. Recall that when you implemented the `L_model_forward` function, at each iteration, you stored a cache which contains (X,W,b, and z). In the back propagation module, you will use those variables to compute the gradients. Therefore, in the `L_model_backward` function, you will iterate through all the hidden layers backward, starting from layer $L$. On each step, you will use the cached values for layer $l$ to backpropagate through layer $l$. Figure 5 below shows the backward pass. \n",
     "\n",
     "\n",
-    "<img src=\"../images/mn_backward.png\" style=\"width:450px;height:300px;\">\n",
+    "<img src=\"./images/mn_backward.png\" style=\"width:450px;height:300px;\">\n",
     "<caption><center>  **Figure 5** : Backward pass  </center></caption>\n",
     "\n",
     "** Initializing backpropagation**:\n",
@@ -1232,7 +1245,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 31,
+   "execution_count": 18,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1288,7 +1301,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 32,
+   "execution_count": 19,
    "metadata": {},
    "outputs": [
     {
@@ -1372,7 +1385,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 35,
+   "execution_count": 20,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1405,7 +1418,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 36,
+   "execution_count": 21,
    "metadata": {},
    "outputs": [
     {
