--- a/01_Deep_Neural_Network/wk2_L1_Python_Basics_With_Numpy_v3a.ipynb
+++ b/01_Deep_Neural_Network/wk2_L1_Python_Basics_With_Numpy_v3a.ipynb
@@ -121,7 +121,7 @@
     "**Reminder**:\n",
     "$sigmoid(x) = \\frac{1}{1+e^{-x}}$ is sometimes also known as the logistic function. It is a non-linear function used not only in Machine Learning (Logistic Regression), but also in Deep Learning.\n",
     "\n",
-    "<img src=\"images/Sigmoid.png\" style=\"width:500px;height:228px;\">\n",
+    "<img src=\"./images/Sigmoid.png\" style=\"width:400px;height:300px;\">\n",
     "\n",
     "To refer to a function belonging to a specific package you could call it using package_name.function(). Run the code below to see an example with math.exp()."
    ]
@@ -1176,7 +1176,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.6.0"
+   "version": "3.8.4"
   }
  },
  "nbformat": 4,
